# track_designer

./: Makefile  README.md  diagram.js
Documentation And Planning/: Concept.html
old/: math.js  simple_belt.html  simple_belt.js  style.css  svg.js  track_system.js
old-2/: package-lock.json  package.json
old-2/src/client/: db.js
old-2/src/client/__tests__/: db.test.js
src/: Cargo.toml
src/client/: TrackSystem.js
src/meshtools/: Cargo.toml  export_mesh_from_blender.py
src/meshtools/src/: lib.rs  mesh.rs  stl.rs  test.py  tools.rs
src/resources/: Cargo.toml
src/resources/src/: lib.rs
src/resources/src/meshes/: Makefile  chunky.blend  chunky.blend1  export.py  mod.rs  simple_lugs.blend  simple_lugs.rs  tread_chunky.rs
src/site/: Cargo.toml
src/site/src/: app.rs  css.rs  events.rs  header_bar.rs  layout.rs  lib.rs  packed-style.css  state.rs
src/site/src/layout/: header_bar.rs  layout.rs  mod.rs  packed-style.css
src/site/src/renderer/: background.rs  mod.rs  stl.rs
src/site/src/renderer/resources/: model.vert
src/site/src/schematic/: handle.rs  idler.rs  mod.rs  svg.rs  track_path_segment.rs  wheel.rs
src/site/src/visualizer3d/: mod.rs  quad.rs
src/site/src/visualizer3d/resources/: background.frag  background.vert  matcap.blend  model.frag
src/track_outer_surfaces/: Cargo.toml  Makefile
src/track_outer_surfaces/src/: lib.rs
src/track_outer_surfaces/src/meshes/: mod.rs  simple_tread.blend  simple_tread.blend1  tread_chunky.rs  tread_simple.rs
src/track_wheel_interfaces/src/: lib.rs
src/track_wheel_interfaces/src/meshes/: chunky.blend  tread_chunky.rs
src/tracktool/: Cargo.toml
src/tracktool/src/: lib.rs  main.rs  system.rs  track.rs  track_path.rs  track_surface.rs  wheel.rs
static/: index.html  main.css  main.js
