[package]
name = "site"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.63"
js-sys="0.3.40"
glam="0.10.0"
tracktool={path="../tracktool"}
meshtools={path="../meshtools"}
track_outer_surfaces={path="../track_outer_surfaces"}

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "DomTokenList",
    "Url",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlDivElement",
    "HtmlUListElement",
    "HtmlLiElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlHeadElement",
    "KeyEvent",
    "FileList",
    "File",
    "FileReader",
    "MouseEvent",
    'Performance',
    "SvgElement",
    "SvgGraphicsElement",
    "SvgMatrix",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlUniformLocation",
    "Window",
]
