[package]
name = "tracktool"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "tracktool"
path = "src/lib.rs"

[[bin]]
name = "tracktool"
path = "src/main.rs"


[dependencies]
meshtools={path="../meshtools"}
resources={path="../resources"}
glam="0.10.0"
track_outer_surfaces={path="../track_outer_surfaces"}
